samples/_failures_safe/1761723817_62c1fa_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_041e59ed.c: In function ‘main’:
./samples/SAFE/__tmp_041e59ed.c:161:13: error: expected declaration or statement at end of input
  161 |             default:
      |             ^~~~~~~
./samples/SAFE/__tmp_041e59ed.c:161:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_041e59ed.c:161:13: error: expected declaration or statement at end of input
